welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:8: error: '(' expected but identifier found.
	if !(a >= 10 && a <= 20) && (b >= 10 && b <= 20){
           ^max1020:33: error: ')' expected but 'return' found.
		return 0
                ^max1020:36: error: Unmatched closing brace '}' ignored here
 }
 ^